carousel.css: added styling to prevent overflow of card title from making navigation buttons jump around

--- a/projects/animeJS/styles/carousel.css
+++ b/projects/animeJS/styles/carousel.css
@@ -114,6 +114,8 @@
   color: #696969;
   width: 100%;
   display: block;
+  height: 10vh; 
+  overflow: hidden;
 }
 
 .cardTitle{
